# exam-simulator-cpp

./: .clang-format  CMakeLists.txt  Dockerfile  Makefile  README.md  application_manager.cpp  application_manager.h  dependencies.txt  main.cpp
.github/workflows/: main.yml
scripts/: build_using_cmake.sh  code_coverage.sh  code_formatting_check.sh  install_third_party.sh  naming_convention_check.sh
src/core/app_manager/generate_questions/: app_manager_generate_questions.cpp  app_manager_generate_questions.h
src/core/app_manager/normal/: app_manager.cpp  app_manager.h
src/core/app_manager/test/: app_manager_test.cpp  app_manager_test.h
src/core/application_manager/: application_manager.cpp  application_manager.h  application_manager.test.cpp
src/core/questions/base_question/: base_answer.h  base_question.h  base_question_interface.h
src/core/questions/base_question/answer/: base_answer.h
src/core/questions/base_question/question/: base_question.h  base_question_interface.h
src/core/questions/multiple_choice_question/: multiple_choice_answer.cpp  multiple_choice_answer.h  multiple_choice_answer.test.cpp  multiple_choice_question.cpp  multiple_choice_question.h
src/core/questions/multiple_choice_question/answer/: multiple_choice_answer.cpp  multiple_choice_answer.h  multiple_choice_answer.test.cpp
src/core/questions/multiple_choice_question/answer/builder/: multiple_choice_answer.builder.cpp  multiple_choice_answer.builder.h  multiple_choice_answer.builder.test.cpp
src/core/questions/multiple_choice_question/answer/validator/: multiple_choice_answer.validator.cpp  multiple_choice_answer.validator.h  multiple_choice_answer.validator.test.cpp
src/core/questions/multiple_choice_question/question/: multiple_choice_question.cpp  multiple_choice_question.h  multiple_choice_question.test.cpp
src/core/questions/multiple_choice_question/question/builder/: multiple_choice_question.builder.cpp  multiple_choice_question.builder.h  multiple_choice_question.builder.test.cpp
src/core/questions/multiple_choice_question/question/validator/: multiple_choice_question.validator.cpp  multiple_choice_question.validator.h  multiple_choice_question.validator.test.cpp
src/shared/constants/: enums.h  messages.h  test_defaults.h
src/shared/enums/: enums.h
src/shared/interfaces/: app_manager.interface.h  builder.interface.h  cloneable.interface.h  quesiton.interface.h
src/shared/utils/: utils.cpp  utils.h  utils.template.cpp  utils.test.cpp
src/shared/utils/di/: injector.h  injector.test.cpp
